added set weight button and made it so weight pulls from local storage if it exists

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div id="workout-display"></div>
 
     <button onclick="displayNextWorkout(workoutDropdown.value)">Next</button>
-    <input type="number">
+    <select id="weight-selection"></select>
+    <button id="set-weight" onclick="setWorkoutWeight()">Set</button>
 
     <script src="workouts.js"></script>
     <script src="workoutActions.js"></script>
