added base weights and store them in local storage

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 
     <script src="workouts.js"></script>
     <script src="workoutActions.js"></script>
+    <script src="baseWeight.js"></script>
 </body>
 </html>
