set day automatically when the page loads, also did a lot of UI changes that I was going to do in a different branch but ended up doing them here

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <script src="workouts.js"></script>
     <script src="workoutActions.js"></script>
     <script src="baseWeight.js"></script>
+    <script src="timeActions.js"></script>
 </body>
 </html>
