addded ability to increase and decrease by 1

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </div>
 
         <div id="button-container" class="permanent-marker-regular">
-            <button id="remove-five" onclick="removeFivePounds()">- 5</button>
-            <button id="add-five" onclick="addFivePounds()">+ 5</button>
+            <button id="remove-one" onclick="removeWeight(1)">- 1</button>
+            <button id="add-one" onclick="addWeight(1)">+ 1</button>
+            <button id="remove-five" onclick="removeWeight(5)">- 5</button>
+            <button id="add-five" onclick="addWeight(5)">+ 5</button>
             <button onclick="changeWorkout(workoutDropdown.value, -1)">Previous</button>
             <button onclick="changeWorkout(workoutDropdown.value, 1)">Next</button>
         </div>
