--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="manifest" href="https://b2ock.github.io/workout/manifest.json">
+    <link rel="manifest" href="/workout/manifest.json">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
