update manifest images and titles

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
 
         <div id="button-container" class="permanent-marker-regular">
-            <button id="remove-one" onclick="removeWeight(1)">- 1</button>
-            <button id="add-one" onclick="addWeight(1)">+ 1</button>
-            <button id="remove-five" onclick="removeWeight(5)">- 5</button>
-            <button id="add-five" onclick="addWeight(5)">+ 5</button>
+            <button class="workout-option" onclick="removeWeight(1)">- 1</button>
+            <button class="workout-option" onclick="addWeight(1)">+ 1</button>
+            <button class="workout-option" onclick="removeWeight(5)">- 5</button>
+            <button class="workout-option" onclick="addWeight(5)">+ 5</button>
             <button onclick="changeWorkout(workoutDropdown.value, -1)">Previous</button>
             <button onclick="changeWorkout(workoutDropdown.value, 1)">Next</button>
         </div>
