--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div id="nav">
+    <!-- <div id="nav"> -->
     </div>
 
     <script src="workouts.js"></script>
