made some little changes about to make some big ones

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <button class="arrow" onclick="changeWorkout(workoutDropdown.value, 1)">></button>
             </div>
             <div id="tags" class="container">
-                <div id="muscle" class="workout-tag center-text">sample</div>
-                <div id="equipment" class="workout-tag center-text">auto</div>
+                <div id="muscle" class="workout-tag center-text"></div>
+                <div id="equipment" class="workout-tag center-text"></div>
             </div>
             <div id="workout-description"></div>
         </div>
