made the workout-info stay in place and updated descriptions to look better

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         </div>
 
         <div id="active-workout" class="container">
-            <div id="sets">
+            <div id="sets" class="active-workout-container">
                 <div class="active-workout-title">set</div>
                 <div id="set-info" class="active-workout-info"></div>
             </div>
-            <div id="reps">
+            <div id="reps" class="active-workout-container">
                 <div class="active-workout-title">reps</div>
                 <div id="rep-info" class="active-workout-info"></div>
             </div>
-            <div id="weight">
+            <div id="weight" class="active-workout-container">
                 <div class="active-workout-title">weight</div>
                 <div id="weight-info" class="active-workout-info"></div>
             </div>
