--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-
+ <!-- scripts -->
     <script src="workouts.js"></script>
     <script src="baseWeight.js"></script>
     <script src="display.js"></script>
