changes to workout controls

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="start-workout" class="container">
             <button id="start-button" class="center-text workout-tag workout-option" onclick="startWorkout()">Start</button>
-            <button id="rest-button" hidden class="center-text workout-tag workout-option" onclick="restWorkout()">Rest</button>
+            <button id="rest-button" hidden class="center-text workout-tag workout-option" onclick="restWorkout()">Next Set</button>
         </div>
     </div>
 
