--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
         </div>
         <div id="add-details" class="container">
             <input id="add-sets" class="workout-detail" placeholder="3" value="3">
-            <div id="add-reps">
-                <input id="add-reps-lower" class="workout-detail" placeholder="8-10" value="8">
+            <div id="add-reps" class="workout-detail">
+                <input id="add-reps-lower" class="workout-detail" placeholder="8" value="8">
                 <span>-</span>
-                <input id="add-reps-upper" class="workout-detail" placeholder="8-10" value="8">
+                <input id="add-reps-upper" class="workout-detail" placeholder="10" value="10">
             </div>
             <input id="add-weight" class="workout-detail" placeholder="0">
         </div>
         
     </div>
     <div id="add-workout-actions" class="container">
-        <button id="save-workout" onclick="" class="workout-buttons">Save</button>
+        <button id="save-workout" onclick="saveWorkout()" class="workout-buttons">Save</button>
         <button id="cancel-add-workout" class="workout-buttons" onclick="">Cancel</button>
     </div>
 </div>
