--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         
     </div>
     <div id="add-workout-actions" class="container">
-        <button id="save-workout" onclick="saveWorkout()" class="workout-buttons">Save</button>
-        <button id="cancel-add-workout" class="workout-buttons" onclick="">Cancel</button>
+        <button id="save-workout" class="workout-buttons">Save</button>
+        <button id="cancel-add-workout" class="workout-buttons" onclick="cancelAdd()">Cancel</button>
     </div>
 </div>
 
