--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div id="add-weight-title">weight</div>
         </div>
         <div id="add-details" class="container">
-            <input id="add-sets" class="workout-detail" placeholder="3" value="3">
-            <div id="add-reps" class="workout-detail">
-                <input id="add-reps-lower" class="workout-detail" placeholder="8" value="8">
+            <input id="add-sets" class="add-workout-detail" placeholder="3" value="3">
+            <div id="add-reps" class="add-workout-detail">
+                <input id="add-reps-lower" class="add-workout-detail" placeholder="8" value="8">
                 <span>-</span>
-                <input id="add-reps-upper" class="workout-detail" placeholder="10" value="10">
+                <input id="add-reps-upper" class="add-workout-detail" placeholder="10" value="10">
             </div>
-            <input id="add-weight" class="workout-detail" placeholder="0">
+            <input id="add-weight" class="add-workout-detail" placeholder="0">
         </div>
         
     </div>
